Added API Gateway, and Discovery Server functionality

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=anurag01
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8081
+server.port=3300
+eureka.client.service-url.defaultZone=http://localhost:9089/eureka
+spring.application.name=order-service
+eureka.instance.prefer-ip-address=true
