--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
 spring.datasource.password=anurag01
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
-server-port = 8082
+server.port=8005
+eureka.client.service-url.defaultZone=http://localhost:9089/eureka
+spring.application.name=inventory-service
+eureka.instance.prefer-ip-address=true
