--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+eureka.client.service-url.defaultZone=http://localhost:9089/eureka
+spring.application.name=product-service
+eureka.instance.prefer-ip-address=true
+server.port=0
